lib_LTLIBRARIES=libbarycentre.la
INCLUDES=@JNI_I@
libbarycentre_la_SOURCES=dat.f dcc2s.f dcs2c.f deuler.f dranrm.f dtt.f dvdv.f epb2d.f epj.f evp.f fk45z.f geoc.f gmst.f prec.f psrephb.f pvobs.f f77trig.c pulsarhunter_BarryCenter.c f772c.h pulsarhunter_BarryCenter.h
libbarycentre_la_LDFLAGS = -module -export-dynamic $(LDFLAGS)
EXTRA_DIST=f77trig.c.01.sibling f77trig.c.22.lreg tel.def


